# personal-finance-app

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  CHANGELOG.md  README.md  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 1a1e93214ff1_normalize_transfers_add_transaction_time.py  31bd6b3c156a_add_savings_pockets_and_savings_pocket_.py  33b9649a6488_drop_fee_transaction_id_from_cash_.py  3da8d576b83f_redesign_transfers_add_spei_to_.py  af47d5171e32_generalize_cash_withdrawals_withdrawal_.py  c1b8a1086331_initial_schema.py  ce04c1824c45_add_counterpart_fields_to_transactions_.py
src/finances/: app.py
src/finances/core/: config.py  database.py
src/finances/models/: __init__.py  account.py  installment.py  savings_pocket.py  transaction.py  transfer.py  withdrawal.py
src/finances/parsers/: banamex_credit.py  base.py  bbva_debit.py  detector.py  factory.py  mercadopago.py  mercadopago_debit.py  nu_credit.py  nu_debit.py  registry.py  utils.py
src/finances/repositories/: account_repository.py  savings_pocket_repository.py  transaction_repository.py  transfer_repository.py
src/finances/schemas/: __init__.py  import_schemas.py  parser_schemas.py
src/finances/services/: account_service.py  import_service.py  transaction_service.py  transfer_service.py
src/finances/views/: import_view.py  transfers.py
