[project]
name = "personal-finance-app"
version = "0.1.0"
description = "Local analysis application for Mexican bank statements"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.9",
    "plotly>=6.7.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "python-dateutil>=2.9.0.post0",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0.50",
    "statsmodels>=0.14.6",
    "streamlit>=1.58.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finances"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["migrations/versions/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
python_version = "3.14"
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/finances --cov-report=term-missing"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
changelog_incremental = true
version_files = [
    "src/finances/core/config.py:__version__",
]

[dependency-groups]
dev = [
    "commitizen>=4.16.3",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
]
